[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cxoneflow_kickoff_api"
dynamic = ["version"]
dependencies = [
    "PyJWT==2.13.0",
    "dataclasses-json==0.6.7",
    "cryptography==48.0.0",
    "cxone-api@git+https://github.com/checkmarx-ts/cxone-async-api.git@b37efa9bd0a7a161c216be4ff1dd53932a0b7ce7" # v1.1.5
    ] 
description = "CxOneFlow Kickoff API"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"cxoneflow_kickoff_api" = "cxoneflow_kickoff_api"}

[tool.setuptools.dynamic]
version = { attr = "cxoneflow_kickoff_api.__version__.__version__" }
