[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cxoneflow_kickoff_api"
dynamic = ["version"]
dependencies = [
    "PyJWT==2.13.0",
    "dataclasses-json==0.6.7",
    "cryptography==48.0.0",
    "cxone-api@https://github.com/checkmarx-ts/cxone-async-api/releases/download/1.1.5/cxone_api-1.1.5-py3-none-any.whl"
    ] 
description = "CxOneFlow Kickoff API"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"cxoneflow_kickoff_api" = "cxoneflow_kickoff_api"}

[tool.setuptools.dynamic]
version = { attr = "cxoneflow_kickoff_api.__version__.__version__" }
